--- a/AlgoritmosOrdenacao/AlgoritmosOrdenacao.csproj
+++ b/AlgoritmosOrdenacao/AlgoritmosOrdenacao.csproj
@@ -43,14 +43,19 @@
   <ItemGroup>
     <Compile Include="Algoritmo.cs" />
     <Compile Include="BubbleSort.cs" />
-    <Compile Include="Comparison.cs" />
+    <Compile Include="BucketSort.cs" />
+    <Compile Include="HeapSort.cs" />
+    <Compile Include="NoParameters.cs" />
     <Compile Include="CountingSort.cs" />
     <Compile Include="DivideAndConquer.cs" />
     <Compile Include="InsertionSort.cs" />
     <Compile Include="Key.cs" />
+    <Compile Include="MergeSort.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuickSort.cs" />
+    <Compile Include="RadixSort.cs" />
     <Compile Include="SelectionSort.cs" />
+    <Compile Include="ShellSort.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
